Added default protocol as https